# sprijt

./: .gitignore  .gitmodules  CMakeLists.txt  index.html  license.txt  package-lock.json  package.json  tsconfig.json  tsconfig.main.json  vite.config.ts
.github/workflows/: build.yml
samples/: README.md
source/: application.cpp  application.hpp  fluent_glyph.hpp  main.cpp
source/nodes/: node_colors.hpp
src/main/: ipc-handlers.ts  main.ts  preload.ts
src/renderer/: App.tsx  electron.d.ts  main.tsx  styles.css
src/renderer/components/: Canvas.tsx  NodePanel.tsx  PropertiesPanel.tsx  Toolbar.tsx
src/renderer/lib/: imageProcessing.ts
src/renderer/nodes/: BaseNode.tsx  registry.ts  types.ts
src/renderer/nodes/ColorReplaceNode/: ColorReplaceNode.tsx
src/renderer/nodes/LoadImageNode/: LoadImageNode.tsx
src/renderer/nodes/PreviewImageNode/: PreviewImageNode.tsx
src/renderer/nodes/SaveImageNode/: SaveImageNode.tsx
src/renderer/store/: flowStore.ts
